<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qm_background"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/badgeSecureAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_pill_gray"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/ic_secure"
            android:layout_marginEnd="@dimen/_6sdp"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qm_secure_access"
            android:textColor="#334155"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="sans-serif-medium" />

    </LinearLayout>

    <!-- Center Content: Logo, Title, Subtitle -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/splash_logo"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:background="@drawable/bg_logo"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_6sdp"
        app:layout_constraintTop_toBottomOf="@id/badgeSecureAccess"
        app:layout_constraintBottom_toTopOf="@+id/tvWelcomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/tvWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qm_welcome_title"
        android:textColor="@color/qm_text_primary"
        android:textSize="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toTopOf="@+id/tvWelcomeSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qm_welcome_subtitle"
        android:textColor="@color/qm_text_secondary"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeTitle"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogleSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom Actions: Google Button, Sign-in note, Local data badge -->
    <LinearLayout
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_google_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvSignInNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/qm_continue_with_google"
            android:textColor="@color/qm_text_primary"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSignInNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qm_sign_in_note"
        android:textColor="@color/qm_text_secondary"
        android:textSize="@dimen/_10sdp"
        android:gravity="center"
        android:fontFamily="@font/inter_medium"
        android:layout_marginBottom="@dimen/_24sdp"
        app:layout_constraintBottom_toTopOf="@+id/badgeLocalData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/badgeLocalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_pill_gray"
        android:paddingHorizontal="@dimen/_14sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:src="@drawable/ic_offline"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qm_local_data_note"
            android:textColor="#475569"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
