<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qm_background"
    tools:context=".ui.activities.SplashActivity">

    <!-- Center Content Group -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_170sdp"
        android:src="@drawable/splash_logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qm_brand_name"
        android:textColor="@color/qm_text_primary"
        android:textSize="@dimen/_30sdp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toTopOf="@id/tvTagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qm_tagline"
        android:textColor="@color/qm_text_secondary"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/inter_regular"
        android:layout_marginTop="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_constraintBottom_toTopOf="@id/badgeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/badgeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/bg_badge"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTagline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:src="@drawable/ic_splash_stars"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qm_badge_text"
            android:textColor="#006329"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/inter_semi_bold" />

    </LinearLayout>

    <!-- Bottom Content Group -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:indeterminate="true"
        android:indeterminateTint="@color/app_color"
        style="?android:attr/progressBarStyleSmall"
        app:layout_constraintBottom_toTopOf="@id/footerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_13sdp" />

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp">

        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:src="@drawable/ic_splash_ai"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qm_powered_by"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/qm_text_secondary"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
